--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,133 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
 </head>
 
-<style>
-    .vote-logo {
-        width: 15em
-    }
 
-    .titulo-evento {
-        font-size: 1.5rem;
-        font-weight: 700;
-        color: #c40000;
-        text-align: center;
-        margin: 0;
-    }
-
-    .subtitulo-evento {
-        font-size: 0.9rem;
-        color: #555;
-        margin: 0;
-    }
-
-    .countdown {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-    }
-
-    .time-box {
-      background-color:#b81817;
-      font-weight: bolder;
-      color: white;
-      text-align: center;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      padding: 2px;
-      width: 2.2em;
-    }
-
-    .hero {
-        position: relative;
-        height: 400px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        opacity: 0;
-        transform: translateY(30px);
-        transition: opacity 0.8s ease, transform 0.8s ease;
-    }
-
-    .hero::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-image: url('public/hero-background.png');
-        background-size: cover;
-        background-position: center;
-        filter: brightness(0.4);
-        z-index: 1;
-    }
-
-    .hero-content {
-        position: relative;
-        z-index: 3;
-        color: white;
-        max-width: 800px;
-        padding: 0 60px;
-    }
-
-    .hero.visible {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    .hero-title {
-        font-size: 56px;
-        font-weight: 700;
-        color: #ffffff;
-        margin-bottom: 24px;
-        letter-spacing: -1px;
-        text-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    }
-
-    .hero-subtitle {
-        font-size: 22px;
-        font-weight: 400;
-        color: #ffffff;
-        line-height: 1.7;
-        text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-    }
-
-</style>
 
 <body>
-    <header class="header">
-        <div class="logo-section">
-            <img src="public/Logo votacion.png" alt="FESC Logo" class="vote-logo">
-        </div>
-        <div>
-            <h1 class="titulo-evento">Tiempo faltante:</h1>
-
-            <div class="contador">
-                <div class="countdown">
-                    <div class="time-box">
-                        <div id="days" class="flip-card">00</div>
-                    </div>
-                    <div class="time-box">
-                        <div id="hours" class="flip-card">00</div>
-                    </div>
-                    <div class="time-box">
-                        <div id="minutes" class="flip-card">00</div>
-                    </div>
-                    <div class="time-box">
-                        <div id="seconds" class="flip-card">00</div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <img src="public/Logo-FESC+30.png" alt="FESC Logo" class="fesc-logo">
-    </header>
+    <site-header></site-header>
 
     <section class="hero fade-in">
         <div class="hero-content">
@@ -164,7 +44,7 @@
                 <p class="category-description">
                     Descubre las propuestas del profesorado y cómo buscan aportar al Consejo Superior.
                 </p>
-                <a href="consejo-superior.html" class="category-button">Ver Candidatos</a>
+                <a href="views/tarjeton_estudiantes.html" class="category-button">Ver Candidatos</a>
             </div>
 
             <div class="category-card">
@@ -173,7 +53,7 @@
                 <p class="category-description">
                     Revisa las planchas de graduados y sus compromisos para fortalecer la representación institucional.
                 </p>
-                <a href="consejo-superior.html" class="category-button">Ver Candidatos</a>
+                <a href="views/tarjeton_graduados.html" class="category-button">Ver Candidatos</a>
             </div>
         </div>
     </section>
@@ -206,40 +86,7 @@
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="footer-inner">
-            <div class="footer-left">
-                <img src="public/icontec.png" alt="FESC" class="footer-logo">
-                <div class="footer-cert-logos">
-                    <!-- Placeholders for certification logos if available -->
-                </div>
-            </div>
-            
-            <div class="footer-center">
-                <h3 class="footer-org-title">Fundación de Estudios Superiores Comfanorte</h3>
-                <p class="footer-legal">Personería Jurídica: Resolución 04172 del 25 de agosto de 1993</p>
-                <p class="footer-paragraph">
-                    Institución de Educación Superior de carácter Tecnológico de derecho privado, de utilidad común y sin ánimo de lucro,
-                    redefinida mediante Resolución del MEN 747 del 19 de febrero de 2009, para ofertar programas Técnicos, Tecnológicos,
-                    Profesionales y Especializaciones.
-            </div>
-
-            <div class="footer-right">
-                <div class="footer-branch">
-                    <h4 class="footer-branch-title">Sede Cúcuta:</h4>
-                    <p class="footer-branch-text">Av 5 # 15-27, Centro</p>
-                    <p class="footer-branch-text">PBX +57 607 5880091 ext 101 102 103</p>
-                    <p class="footer-branch-text">312 354 1578 / 313 386 0356</p>
-                </div>
-                <div class="footer-branch">
-                    <h4 class="footer-branch-title">Sede Ocaña:</h4>
-                    <p class="footer-branch-text">Kdx 194-785, Vía Universitaria</p>
-                    <p class="footer-branch-text">PBX +57 607 5880091 ext 203</p>
-                    <p class="footer-branch-text">313 386 1614</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <site-footer></site-footer>
     <script>
         // Animación de scroll suave
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
@@ -400,6 +247,7 @@
             updateHeaderOffset();
         });
     </script>
+  <script src="js/components.js"></script>
 </body>
 
 </html>
