--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,6 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 </head>
-
-
-
 <body>
     <site-header></site-header>
 
@@ -83,14 +80,10 @@
             <div class="info-grid">
                 <div class="info-card">
                     <h3 class="info-card-title">¿Quiénes pueden votar?</h3>
-                    <p class="info-card-text">
-                        Todos los graduados activos de FESC tienen derecho a participar en este proceso democrático.
-                    </p>
                     <ul class="info-card-text">
-                        <li>Articulación y estudiantes matriculados (presencial, distancia o virtual) votan por
-                            Estudiantes.</li>
-                        <li>Docentes votan por Docentes.</li>
-                        <li>Egresados/Graduados votan por Egresados.</li>
+                        <li>Estudiantes matriculados votan por representantes estudiantiles y representantes egresados</li>
+                        <li>Docentes pueden votar por representantes docentes.</li>
+                        <li>Egresados/Graduados pueden votar por representantes Egresados.</li>
                     </ul>
                 </div>
                 <div class="info-card">
@@ -105,6 +98,12 @@
                     <p class="info-card-text">
                         Mantente informado sobre las fechas clave del proceso electoral a través de los canales
                         oficiales.
+                    </p>
+                </div>
+                <div class="info-card info-card-accent">
+                    <h3 class="info-card-title"><span class="material-symbols-outlined" aria-hidden="true">calendar_today</span> Rango de fechas</h3>
+                    <p class="info-card-text">
+                        Votaciones abiertas del lunes 6 de Octubre al sábado 11 de Octubre.
                     </p>
                 </div>
             </div>
@@ -125,8 +124,6 @@
                 }
             });
         });
-
-
 
         // Intersection Observer para animaciones de fade-in
         const observerOptions = {
