--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@
                 <div class="info-card">
                     <h3 class="info-card-title">¿Quiénes pueden votar?</h3>
                     <ul class="info-card-text">
-                        <li>Estudiantes matriculados votan por representantes estudiantiles y representantes egresados</li>
+                        <li>Estudiantes matriculados (presenciales - virtuales - distancia) y estudiantes de articulación votan por respresentantes estudiantiles.</li>
                         <li>Docentes pueden votar por representantes docentes.</li>
                         <li>Egresados/Graduados pueden votar por representantes Egresados.</li>
                     </ul>
