--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 </head>
+
 <body>
     <site-header></site-header>
 
@@ -40,6 +41,17 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    
+    <!-- Vote CTA: before candidates -->
+    <section class="vote-cta fade-in">
+        <div class="vote-cta-inner">
+            <div class="vote-cta-badge"><span class="material-symbols-outlined" aria-hidden="true">campaign</span> ¡Participa ahora!</div>
+            <div class="vote-cta-icon"><span class="material-symbols-outlined" aria-hidden="true">how_to_vote</span></div>
+            <h2 class="vote-cta-title">Vota aquí</h2>
+            <p class="vote-cta-subtitle">Inicia la verificación de identidad para continuar con tu votación.</p>
+            <a href="views/admision_cedula.html" class="category-button cta-primary" aria-label="Ir a validación de identidad">Ir a votación</a>
         </div>
     </section>
 
@@ -82,7 +94,8 @@
                 <div class="info-card">
                     <h3 class="info-card-title">¿Quiénes pueden votar?</h3>
                     <ul class="info-card-text">
-                        <li>Estudiantes matriculados (presenciales - virtuales - distancia) y estudiantes de articulación votan por respresentantes estudiantiles.</li>
+                        <li>Estudiantes matriculados (presenciales - virtuales - distancia) y estudiantes de
+                            articulación votan por respresentantes estudiantiles.</li>
                         <li>Docentes pueden votar por representantes docentes.</li>
                         <li>Egresados/Graduados pueden votar por representantes Egresados.</li>
                     </ul>
@@ -91,8 +104,11 @@
                     <h3 class="info-card-title">¿Cómo votar?</h3>
                     <p class="info-card-text">
                         El proceso de votación se realizará de manera presencial y virtual según las indicaciones
-                        institucionales.
+                        institucionales a continuacion:
+
                     </p>
+                    <button style="margin-top: 25px;" type="button" id="open-tutorial" class="category-button"
+                        aria-haspopup="dialog">Aprende como</button>
                 </div>
                 <div class="info-card">
                     <h3 class="info-card-title">Fechas importantes</h3>
@@ -102,7 +118,8 @@
                     </p>
                 </div>
                 <div class="info-card info-card-accent">
-                    <h3 class="info-card-title"><span class="material-symbols-outlined" aria-hidden="true">calendar_today</span> Rango de fechas</h3>
+                    <h3 class="info-card-title"><span class="material-symbols-outlined"
+                            aria-hidden="true">calendar_today</span> Rango de fechas</h3>
                     <p class="info-card-text">
                         Votaciones abiertas del lunes 6 de Octubre al sábado 11 de Octubre.
                     </p>
@@ -111,17 +128,48 @@
         </div>
     </section>
     <site-footer></site-footer>
+
+    <!-- Modal Tutorial: Cómo votar -->
+    <div id="tutorial-modal" class="modal" aria-hidden="true" role="dialog" aria-labelledby="tutorial-title">
+        <div class="modal-overlay" data-close="true"></div>
+        <div class="modal-dialog" role="document">
+            <button class="modal-close" aria-label="Cerrar" data-close="true">&times;</button>
+            <div class="modal-header">
+                <h2 id="tutorial-title">Tutorial: Cómo votar</h2>
+            </div>
+            <div class="modal-body">
+                <div class="tutorial-step" id="tutorial-step"></div>
+                <div class="tutorial-image-wrap">
+                    <img id="tutorial-image" src="" alt="Paso del tutorial">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="step-dots" id="tutorial-dots"></div>
+                <div class="nav-buttons">
+                    <button id="btn-prev" class="button-ghost" type="button">Anterior</button>
+                    <button id="btn-next" class="category-button" type="button">Siguiente</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
         // Animación de scroll suave
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
+                const href = this.getAttribute('href');
+                if (!href || href === '#') {
+                    // Ignorar enlaces vacíos como el del modal
+                    return;
+                }
                 e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
+                try {
+                    const target = document.querySelector(href);
+                    if (target) {
+                        target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                    }
+                } catch (_) {
+                    // Si el selector no es válido, no hacer nada
                 }
             });
         });
@@ -243,6 +291,7 @@
         };
         // Expone la fecha a otros componentes (header usa esto)
         window.ELECTION_DATE = ELECTION_DATE;
+        try { localStorage.setItem('ELECTION_DATE', JSON.stringify(ELECTION_DATE)); } catch (_) {}
         function getBogotaTimestamp({ year, month, day, hour, minute }) {
             return Date.UTC(year, month - 1, day, hour + 5, minute, 0);
         }
@@ -288,6 +337,134 @@
         });
     </script>
     <script src="js/components.js"></script>
+    <!-- Fallback script para asegurar apertura del modal aunque falle otro JS -->
+    <script>
+        (function () {
+            try {
+                var btn = document.getElementById('open-tutorial');
+                var modal = document.getElementById('tutorial-modal');
+                function __open() { if (!modal) return; modal.classList.add('open'); modal.setAttribute('aria-hidden', 'false'); document.body.style.overflow = 'hidden'; }
+                function __close() { if (!modal) return; modal.classList.remove('open'); modal.setAttribute('aria-hidden', 'true'); document.body.style.overflow = ''; }
+                if (btn) { btn.addEventListener('click', function (e) { e.preventDefault(); __open(); }); }
+                window.__openTutorial = __open;
+                window.__closeTutorial = __close;
+            } catch (e) { /* noop */ }
+        })();
+    </script>
+    <script>
+        // =====================
+        // Modal Tutorial: pasos con imágenes (robusto)
+        // =====================
+        (function () {
+            const modal = document.getElementById('tutorial-modal');
+            const openBtn = document.getElementById('open-tutorial');
+            if (!modal || !openBtn) return; // Nada que hacer si falta algo
+
+            const steps = [
+                {
+                    title: 'Paso 1 - Ingresa a la votación',
+                    text: 'Presiona el boton, "Votar ahora" para empezar el proceso de la parte superior o la seccion anterior a candidatos',
+                    image: 'public/tutorial/paso 1.png'
+                },
+                {
+                    title: 'Paso 2 - Valida tus datos',
+                    text: 'Dirígete a la sección de validación e ingresa tu número de identificación.',
+                    image: 'public/tutorial/paso 2.png'
+                },
+                {
+                    title: 'Paso 3 - Selecciona tus candidatos',
+                    text: 'Revisa cuidadosamente las planchas y candidatos disponibles en el tarjetón digital. Selecciona los candidatos por lo que votaras (por cada sección, una sola seleccion)',
+                    image: 'public/tutorial/paso 3.gif'
+                },
+                {
+                    title: 'Paso 4 - Confirma tu voto',
+                    text: 'Ya despues de que hayas elegido tus candidatos dale al boton de "Confirmar voto" en la parte inferior.',
+                    image: 'public/tutorial/paso 4.png'
+                },
+                {
+                    title: 'Paso 5 - Envia tu voto',
+                    text: 'Recibiras un pequeño resumen de tus elecciones, rectifica y envia tu voto.',
+                    image: 'public/tutorial/paso 5.png'
+                },
+            ]; 
+
+            const overlay = modal.querySelector('.modal-overlay');
+            const dialog = modal.querySelector('.modal-dialog');
+            const closeEls = modal.querySelectorAll('[data-close]');
+            const stepContainer = modal.querySelector('#tutorial-step');
+            const imgEl = modal.querySelector('#tutorial-image');
+            const dotsEl = modal.querySelector('#tutorial-dots');
+            const prevBtn = modal.querySelector('#btn-prev');
+            const nextBtn = modal.querySelector('#btn-next');
+
+            let idx = 0;
+
+            function renderDots() {
+                dotsEl.innerHTML = '';
+                steps.forEach((_, i) => {
+                    const b = document.createElement('button');
+                    b.type = 'button';
+                    b.className = 'dot' + (i === idx ? ' active' : '');
+                    b.setAttribute('aria-label', 'Ir al paso ' + (i + 1));
+                    b.addEventListener('click', () => { idx = i; renderStep(); });
+                    dotsEl.appendChild(b);
+                });
+            }
+
+            function renderStep() {
+                const s = steps[idx];
+                stepContainer.innerHTML = `<h3>${s.title}</h3><p>${s.text}</p>`;
+                imgEl.src = s.image;
+                imgEl.alt = `${s.title} - imagen`;
+                if (prevBtn) prevBtn.disabled = idx === 0;
+                if (nextBtn) nextBtn.textContent = idx === steps.length - 1 ? 'Finalizar' : 'Siguiente';
+                renderDots();
+            }
+
+            function openModal() {
+                idx = 0;
+                renderStep();
+                modal.classList.add('open');
+                modal.setAttribute('aria-hidden', 'false');
+                document.body.style.overflow = 'hidden';
+                // Enfocar el primer control accesible
+                (prevBtn || nextBtn || modal).focus?.();
+            }
+
+            function closeModal() {
+                modal.classList.remove('open');
+                modal.setAttribute('aria-hidden', 'true');
+                document.body.style.overflow = '';
+                openBtn.focus?.();
+            }
+
+            // Evitar que un click dentro del diálogo cierre el modal
+            dialog?.addEventListener('click', (e) => e.stopPropagation());
+
+            // Apertura
+            openBtn.addEventListener('click', (e) => { e.preventDefault(); openModal(); });
+
+            // Cierres
+            overlay?.addEventListener('click', closeModal);
+            closeEls.forEach(el => el.addEventListener('click', closeModal));
+
+            // Navegación
+            prevBtn?.addEventListener('click', () => { if (idx > 0) { idx--; renderStep(); } });
+            nextBtn?.addEventListener('click', () => { if (idx < steps.length - 1) { idx++; renderStep(); } else { closeModal(); } });
+
+            // Teclado (Escape / Flechas)
+            document.addEventListener('keydown', (ev) => {
+                if (!modal.classList.contains('open')) return;
+                if (ev.key === 'Escape') closeModal();
+                if (ev.key === 'ArrowRight') nextBtn?.click();
+                if (ev.key === 'ArrowLeft') prevBtn?.click();
+            });
+
+            // Expone helpers por si mantienes el fallback
+            window.__openTutorial = openModal;
+            window.__closeTutorial = closeModal;
+        })();
+    </script>
 </body>
 
 </html>
