Estilos de validacion ajustados

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
             <div class="vote-cta-icon"><span class="material-symbols-outlined" aria-hidden="true">how_to_vote</span></div>
             <h2 class="vote-cta-title">Vota aquí</h2>
             <p class="vote-cta-subtitle">Inicia la verificación de identidad para continuar con tu votación.</p>
-            <a href="views/admision_cedula.html" class="category-button cta-primary" aria-label="Ir a validación de identidad">Ir a votación</a>
+            <a href="/votaciones/" class="category-button cta-primary" aria-label="Ir a validación de identidad">Ir a votación</a>
         </div>
     </section>
 
@@ -285,8 +285,8 @@
         const ELECTION_DATE = {
             year: 2025,
             month: 10,   // 1-12 (Octubre = 10)
-            day: 6,
-            hour: 6,     // 0-23 (6 am)
+            day: 4,
+            hour: 8,     // 0-23 (8 am)
             minute: 0
         };
         // Expone la fecha a otros componentes (header usa esto)
